--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}","D:\\numerical analysis\\head/*.c",
+                "${file}",  //单文件调试用
+                //"${file}","D:\\numerical analysis\\head/*.c", //多文件调试用
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
